Adjust winning box size to stop overlap

--- a/public/styles.css
+++ b/public/styles.css
@@ -151,7 +151,7 @@ button {
   margin-top: 30px;
   border: 1px solid black;
   border-width: thin;
-  width: 250px;
+  width: 70%;
   height: auto;
   text-align: center;
   font-size: 1.3em;
